Fix CountDown bug + better user experience on small devices + obligation to sign before reservation

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header img:last-child {
         font-size: 20px;
         margin: 10px;
     }
-    
+
     header img:first-child {
         margin: 10px;
     }
@@ -295,7 +295,7 @@ aside {
 }
 
 .info-station button,
-.reservation button:last-child, 
+.reservation button:last-child,
 .cancel {
     border: solid 2px #aa2b35;
     background-color: #CC333F;
@@ -316,7 +316,7 @@ aside {
 .buttons {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
